# bmstu-database-course-work

./: .gitignore  CMakeLists.txt  Makefile  docker-compose.yml  docker-entrypoint.sh  index.html  readme.md  run_build.sh
.github/workflows/: ci.yaml
72/: index.html
72/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
72/data/test-cases/: 113e55a4a8192a79.json  21c93fb2a1855473.json  25d8f42a16e6fac2.json  2f77b54ac2df7a06.json  337940705247be5b.json  3ce04a9ac21c60af.json  3e189c58aab3c7f6.json  46ac51cf6eccdf56.json  4b0e3d1b8fbee626.json  (+23 more)
72/export/: influxDbData.txt  prometheusData.txt
72/history/: retry-trend.json
72/widgets/: duration.json  executors.json  severity.json  summary.json
73/: index.html
73/export/: influxDbData.txt
74/: index.html
74/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
74/export/: influxDbData.txt  prometheusData.txt
74/history/: history-trend.json  history.json  retry-trend.json
74/widgets/: categories-trend.json  duration-trend.json  environment.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
75/: index.html
75/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
75/export/: influxDbData.txt  prometheusData.txt
75/history/: history.json
75/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
76/: index.html
76/export/: influxDbData.txt
77/: index.html
77/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
77/export/: influxDbData.txt  prometheusData.txt
77/history/: history-trend.json  history.json
77/widgets/: categories-trend.json  duration-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
78/: index.html
78/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
78/export/: influxDbData.txt  prometheusData.txt
78/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
78/widgets/: duration.json  executors.json  retry-trend.json  severity.json  summary.json
79/: index.html
79/export/: influxDbData.txt
80/: index.html
80/export/: influxDbData.txt
ci/: run_build.sh
cli/: conference.py  event_post.json  request_post.json  settings.json
configs/: config_vars.docker.yaml  config_vars.docker_readonly.yaml  int_test_config.yaml  static_config.yaml
data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/test-cases/: 1944d7d3879ca907.json  2cd3dc6fa8bfc726.json  2f70aad9c853922d.json  2f827e6adfeb2d4c.json  3df742778460f0de.json  44a04001e5507a39.json  4b84f4f9b12c3853.json  5a939c24f5ad8bba.json  5fb76afcbe40869c.json  6a6b39a2a685bc8c.json  6e1d9fe211279321.json  765cada5c8cc19e8.json  7844dee9047ef70e.json  7bb9729c2dd6b33c.json  831f9ace665cc341.json  8e20662d0f4ee59f.json  900b5515ffb9dbf0.json  966e46a8673c5d0e.json  a179454d25d11199.json  a2f234930b9ab9e6.json  a6117770ccf1c243.json  a9f9253c6ab08f1.json  b3b2c5b9a9cea1f7.json  b847ed666318675.json  b8b4c18ddb23286.json  d1168c452b537a00.json  d83437b537449d11.json  db031ab2bb25173d.json  e4bc0fad43d1eea2.json  e774ca1ccbb690a0.json  eaa3bf9d690814a2.json  ec7655c4087bc667.json
docker/: base.Dockerfile  dev.Dockerfile  full.Dockerfile
docker/dev/: docker-compose.yml
docker/e2e/: docker-compose.yaml
docker/inttest/: docker-compose.yaml
docker/nginx/: Dockerfile
docker/release/: Dockerfile
docker/userver/: full.Dockerfile
docs/: measurements.csv
docs/report/: .gitignore  00-title.tex  10-abstract.tex  15-intro.tex  20-analysis.tex  30-construct.tex  40-technology.tex  50-research.tex  55-conclusion.tex  60-biblio.tex  70-schema.tex  main.tex  preamble.tex  ~$pres.pptx
export/: influxDbData.txt  prometheusData.txt
history/: history.json
last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
nginx/: nginx.conf
nginx/static/: index.html
openapi/: common.yaml  request_comment_post.yaml  request_get.yaml
postgresql/data/: initial_data.sql
postgresql/schemas/: db_1.sql  db_no_foreign_keys.sql
postgresql/slave_init/: 01-config.sh
schemas/: common.yaml  generate_cmake.sh  run_codegen.sh
schemas/handlers/: request_post.yaml
schemas/openapi/: api-spec.yaml  event_list_get.yaml  event_post.yaml  file_put.yaml  manage_access_put.yaml  request_list_get.yaml  request_post.yaml
src/: components.cpp  components.hpp  main.cpp
src/benchmark/: make_dia.py  measure_sql_time.py
src/di/: init.cpp  init.hpp
src/handlers/: base_handler.cpp  base_handler.hpp  base_json_handler.hpp  base_json_handler_fwd.hpp  manage_access_post.cpp  request_post.cpp  request_post.hpp
src/http/: exception.hpp  query.cpp  query.hpp  request.hpp  response.hpp
src/middleware/: auth.cpp  auth.hpp  auth_pipeline_builder.cpp  auth_pipeline_builder.hpp
src/repository/: articles_repository.hpp  event_repository.hpp  exception.h  factory.cpp  factory.hpp  file_meta_repository.hpp  file_storage_repository.hpp  permission.hpp  requests_repository.hpp  user_data_repository.cpp  user_data_repository.hpp
src/services/: article_service.hpp  auth_service.hpp  event_service.hpp  exception.cpp  exception.hpp  factory.cpp  factory.hpp  file_service.hpp  idm_service.hpp  permission_service.hpp  request_management_service.cpp  request_management_service.hpp
src/tests/: example.cpp  mock.hpp  mock_repositories.cpp  mock_repositories.hpp  object_mother.cpp  object_mother.hpp  test_auth_service.cpp  test_idm_service.cpp  test_request_service.cpp
src/utils/: auth.cpp  auth.hpp  json.hpp  map.hpp  merge_utils.hpp  meta.hpp  request.cpp  request.hpp  uuid.cpp  uuid.hpp
tests/: __init__.py  conftest.py  load_testing.md  run_as_user.sh  run_e2e.sh
tests/client/: __init__.py
tests/handlers/: test_request_post.py
widgets/: duration-trend.json  duration.json  severity.json  suites.json  summary.json
(+265 files in other folders)
